# picture-classifier

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-macos.yml  update-homebrew-tap.yml
packaging/: picture-classifier.spec
src/picture_classifier/: app_entry.py  cli.py  cluster.py  db.py  scenes.py  scorer.py  server.py  userstate.py
src/picture_classifier/scoring/: blur.py  exposure.py  eyes.py  faces.py
src/picture_classifier/web/: app.js  index.html  style.css
